fix alignment of scan button

--- a/src/app/components/borrow-book/borrow-book.component.css
+++ b/src/app/components/borrow-book/borrow-book.component.css
@@ -1,7 +1,7 @@
 @reference "../../../styles.css";
 
 .middle-button {
-    @apply text-xl mx-auto;
+    @apply text-xl mx-auto md:w-[500px] md:mx-0 mb-3;
 }
 
 .input-field {
